--- a/src/components/panels/Response.scss
+++ b/src/components/panels/Response.scss
@@ -183,5 +183,9 @@
     .name-key {
       color: #79b8ff !important;
     }
+
+    .object-size {
+      color: #a78bfa !important;
+    }
   }
 }
